--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
@@ -18,7 +16,7 @@ services:
       - "6881:6881/udp"
     restart: unless-stopped
     networks:
-      - ${NETWORK_NAME}
+      - media-network
 
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:latest
@@ -35,7 +33,7 @@ services:
     depends_on:
       - qbittorrent
     networks:
-      - ${NETWORK_NAME}
+      - media-network
 
   sonarr:
     image: lscr.io/linuxserver/sonarr:latest
@@ -55,7 +53,7 @@ services:
       - qbittorrent
       - prowlarr
     networks:
-      - ${NETWORK_NAME}
+      - media-network
 
   radarr:
     image: lscr.io/linuxserver/radarr:latest
@@ -75,7 +73,7 @@ services:
       - qbittorrent
       - prowlarr
     networks:
-      - ${NETWORK_NAME}
+      - media-network
 
   jellyseerr:
     image: fallenbagel/jellyseerr:latest
@@ -94,32 +92,8 @@ services:
       - sonarr
       - radarr
     networks:
-      - ${NETWORK_NAME}
-
-  # ────────────────────────────────────────────────
-  # 🧩 OPTIONAL: Bazarr (Subtitle Automation)
-  # ────────────────────────────────────────────────
-  # bazarr:
-  #   image: lscr.io/linuxserver/bazarr:latest
-  #   container_name: bazarr
-  #   environment:
-  #     - PUID=${PUID}
-  #     - PGID=${PGID}
-  #     - TZ=${TZ}
-  #   volumes:
-  #     - ${APPDATA_PATH}/bazarr:/config
-  #     - ${MEDIA_PATH}/Movies:/movies
-  #     - ${MEDIA_PATH}/TV:/tv
-  #   ports:
-  #     - "6767:6767"
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - sonarr
-  #     - radarr
-  #   networks:
-  #     - ${NETWORK_NAME}
-  # ────────────────────────────────────────────────
+      - media-network
 
 networks:
-  ${NETWORK_NAME}:
-    name: ${NETWORK_NAME}
+  media-network:
+    name: media-network
