--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,18 @@ services:
     networks:
       - media-network
 
+  flaresolverr:
+    image: flaresolverr/flaresolverr:latest
+    container_name: flaresolverr
+    environment:
+      - LOG_LEVEL=info
+      - TZ=${TZ}
+    ports:
+      - "8191:8191"
+    restart: unless-stopped
+    networks:
+      - media-network
+
 networks:
   media-network:
     name: media-network
