--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,9 @@ services:
       - ${APPDATA_PATH}/jellyseerr:/app/config
     ports:
       - "5055:5055"
+    dns:
+      - 1.1.1.1  # Cloudflare DNS
+      - 8.8.8.8  # Google DNS
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:5055/api/v1/status || exit 1
       start_period: 20s
